tests/fixtures/negative/code-style/ProhibitSuppressWarnings_SuppressOnMethod.cls
// Violation: @SuppressWarnings on method
public class Example4 {
    @SuppressWarnings('PMD.UnusedLocalVariable')
    public void method() {
        int unused = 42;
    }
}

